# notebook_to_code

./: .dockerignore  .gitignore  Dockerfile  README.md  WEB_UI_README.md  app.py  config.py  config.yaml  data_loader.py  eval.json  main.py  model.py  pyproject.toml  requirements.txt  sample_notebook.ipynb  test_pii.ipynb  train.py  utils.py
.github/workflows/: ci.yml
agents/: architect_agent.py  devops_agent.py  parser.py  parser_agent.py  pipeline_agent.py  refactorer_agent.py  reviewer_agent.py
ml_pipeline.egg-info/: PKG-INFO  SOURCES.txt
models/: logistic_regression.pkl
notebooks/: logistic_regression_experiment.ipynb  original_notebook.ipynb  sample_notebook.ipynb  training_demonstration.ipynb
scripts/: run_pipeline.py
src/: __init__.py  data.py  data_loader.py  evaluate.py  evaluation.py  llm.py  main.py  model.py  preprocessing.py  train.py
src/callbacks/: pii_guardrail.py
src/evaluation/: evaluator.py
src/tools/: notebook_tools.py
src/utils/: security.py
tests/: test_architect.py  test_data.py  test_data_loader.py  test_devops.py  test_evaluate.py  test_evaluation.py  test_model.py  test_parser.py  test_pii_callback.py  test_preprocessing.py  test_refactorer.py  test_reviewer.py  test_train.py
