[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-pipeline"
version = "0.1.0"
description = "A simple ML pipeline for logistic regression"
authors = [{name = "Author"}]
dependencies = [
    "pandas",
    "scikit-learn",
    "streamlit>=1.51.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
src = "src"
